# llm_project_vietnamese_law

./: .gitignore  README.md  RES.xlsx  docker-compose.opensearch.yml  important_docs.txt  pyproject.toml  requirements_hf.txt  uv.toml
analysis/: dataset_profile.json  res_xlsx_summary.json
data/datahuggingface/: important_docs_from_excel.txt  important_docs_missing.txt  important_docs_summary.json  metadata_important_docs.jsonl
data/evaluate/: evaluate.csv  evaluate_messages.jsonl
data/training_lora/: split_summary.json  val_messages.jsonl
notebooks/: kaggle_embed_jsonl_full.ipynb  qlora-law.ipynb  rag_evaluate_base.ipynb  rag_evaluate_qlora.ipynb
scripts/: README.md  evaluate_rag_random_subset.py  rag_hybrid_opensearch_faiss_qwen.py
scripts/data/: chunk_legal_corpus.py  download_hf_legal_dataset.py  extract_doc_numbers_from_excel.py  filter_important_docs_from_hf.py  join_content_metadata.py  prepare_and_profile_dataset.py
scripts/indexing/: faiss_ingest_langchain.py  faiss_query_langchain.py  kaggle_embed_jsonl_full.py  opensearch_ingest_chunks.py  test_opensearch_query.py
scripts/publishing/: upload_dataset_to_hf.py
scripts/training/: split_res_for_lora.py
